# cloud_watch_test

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: app.py  log_config.yaml  log_utils.py
app/config/: log_config.yaml
